<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="home">Home</string>
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="latest_Songs">Latest Songs</string>
    <string name="new_Songs">New Songs</string>
    <string name="special">Special Songs</string>
    <string name="more">More</string>
    <string name="main_menu">Main Menu</string>
    <string name="search">Search</string>
    <string name="song_search">Song Search</string>
    <string name="video_Archive">Video Archive</string>
    <string name="downloads">Downloads</string>
    <string name="favorites">Favorites</string>
    <string name="rate_on_googlePlay">Rate On Google Play</string>
    <string name="about">About</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="share_on">Share On</string>
    <string name="share">Share</string>
    <string name="recent_artist">Recent Artist</string>
    <string name="nothing_found">Nothing Found!</string>
    <string name="_00_00">00:00</string>
    <string name="dash">-</string>
    <string name="download">download</string>
    <string name="try_again">مجدد تلاش کنید</string>
    <string name="favorite">Favorite</string>
    <string name="UnFavorite">UnFavorite</string>
    <string name="start_downloading">Start Downloading</string>
    <string name="download_completed">Download Completed</string>
    <string name="delete">delete</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="empty_favorite">Favorite List Is Empty</string>
    <string name="empty_download">Download List Is Empty</string>
</resources>